tests/type_check/place_typing/place_deref_of_non_ref.err.expected
error: at 5:13: [TC-DerefOfNonPointer] In function 'f', block 'entry': Cannot dereference non-pointer type i64
   |
 5 |             x = copy y.*;
   |             ^^^^^^^^^^^^
